# saveyaar_movies

./: .gitignore  README.md  igest.py
backend/: load.py  pyproject.toml
backend/app/: logger.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: content.py  metadata.py  movies.py  tmdb_crossing.py  tv.py
backend/app/core/: db.py  tmdb_crossing.py
backend/app/models/: movie.py  ott.py  people.py  season.py  tmdb.py  tv.py
backend/saveyaar_movies/: pom.xml
backend/saveyaar_movies/src/main/java/com/saveyaar/saveyaar_movies/: SaveyaarMoviesApplication.java
backend/saveyaar_movies/src/main/java/com/saveyaar/saveyaar_movies/DTO/: DiscoverDTO.java  Genre.java  Language.java  Movie.java  Ott.java  People.java  UserPreference.java
backend/saveyaar_movies/src/main/java/com/saveyaar/saveyaar_movies/client/: TMDBClient.java
backend/saveyaar_movies/src/main/resources/: application.properties
backend/saveyaar_movies/src/test/java/com/saveyaar/saveyaar_movies/: SaveyaarMoviesApplicationTests.java
depricated/: pyproject.toml  tmdb_lang_metadata.json  tv_lang_metadata.json
depricated/app/api/: router.py
depricated/app/api/routes/: content.py  movies.py  people.py
depricated/app/core/: content.py  crossing.py  metadata.py  movie.py  tmdb_crossing.py
depricated/app/models/: api_models.py  genre.py  miscellaneous.py  movie.py  ott.py  people.py  season.py  tmdb.py  tv.py
depricated/app/models/sample_data/: changes.json  movies.json  one_movie.json  one_tv.json  tvs.json
frontend/saveyaar_movies/: app.json  babel.config.js  env.d.tsx  (+3 more)
(+114 files in other folders)
