[tool.poetry]
name = "saveyaar-movie-backend"
version = "0.1.0"
description = "saveyaar_movie is a feature small feature in saveyaar, this is the backend for it using FAST API."
authors = ["Ankith Veldandi <143205588+aveldan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.0"
motor = "^3.5.1"
beanie = "^1.26.0"
bs4 = "^0.0.2"
requests = "^2.32.3"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
